--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for perl module AppConfig::Std
 1.09 2014-01-30
 
     - Added "use warnings"
+    - min Perl version 5.6.0
 
 1.08 2013-07-20
 
